--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <div class="box">CA:</div>
+    <div class="box">CA: 78uWq31k5mczeYUHVWDtQstJ6ibCL7LWUoX8F3Eibonk</div>
     <div class="message">this website is useless</div>
 </body>
 </html>
